# telegram-ai

./: .cursorrules  .env.example  .gitignore  .gitkeep  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  MIGRATION_GUIDE.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  RATE_LIMITS_GUIDE.md  README.md  README_EN.md  SIMILAR_PROJECTS_ANALYSIS.md  STABILITY_ANALYSIS.md  TESTING_REPORT.md  clear_user_data.py  config.yaml  next_steps.md  pyproject.toml  rm.md  telegram-ai-assistant-setup.plan.md  test_ai_connection.py  upgrade.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
infrastructure/: docker-compose.yml
knowledge_base/: README.md
knowledge_base/capabilities/: deployment.md  full-stack.md  integration.md
knowledge_base/company/: about.md  capabilities.md  industries.md  process.md  services.md
knowledge_base/projects/: _index.md
knowledge_base/projects/ai-assistants/: analyze-calls-ai.md  mindtech-platform.md  scanovich_ai-audio-call.md  scanovich_ai-mri_radiology_assistant.md  telegram-ai.md  vllm-asr.md  vllm-talk.md  website-scanovich_ai.md  whisper-writer.md
knowledge_base/projects/automation/: gtd.md  voip-calls-downloader.md
knowledge_base/projects/speech-processing/: agentsales.md  gtd.md  voicetotext-linux.md  voicetotext-macos.md  voicetotext-mlx-m1-8gb.md
knowledge_base/technologies/: automation.md  computer-vision.md  custom-development.md  llm.md  ocr.md  speech-to-text.md
knowledge_base/use-cases/: custom-solutions.md  finance.md  healthcare.md  legal.md  telecom.md
scripts/: build_knowledge_base.py  clear_all_history.py  extract_github_projects.py  extract_website_content.py  reset_rate_limits.py  start_api_gateway.py  start_telegram_bot.py  start_worker.py
services/analytics/: Dockerfile  pyproject.toml
services/analytics/src/: __init__.py
services/analytics/src/exporters/: __init__.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/: __init__.py  main.py
services/api-gateway/src/routes/: __init__.py  analytics.py  conversations.py  leads.py
services/telegram-bot/: Dockerfile  __init__.py  pyproject.toml
services/telegram-bot/src/: __init__.py  main.py
services/telegram-bot/src/chains/: __init__.py  sales_chain.py
services/telegram-bot/src/integrations/: __init__.py  ai_client.py  calendar.py  client.py  config.py  intent_classifier.py  main.py  meeting_summary.py  slot_extractor.py  voice_handler.py
services/worker/: Dockerfile  pyproject.toml
services/worker/src/: __init__.py
services/worker/src/tasks/: __init__.py  meeting_summary.py
shared/: __init__.py
shared/cache/: __init__.py  redis_client.py
shared/config/: settings.py
shared/database/: connection.py  models.py
shared/events/: __init__.py  schemas.py
shared/utils/: __init__.py
src/telegram_ai/: __init__.py  ai_client.py  calendar.py  client.py  config.py  consent.py  events.py  intent_classifier.py  language_detector.py  main.py  meeting_summary.py  memory.py  rag.py  rate_limiter.py  sales_chain_langgraph.py  sales_flow.py  slot_extractor.py  tools.py  url_parser.py  vector_memory.py  voice_handler.py  web_search.py
src/telegram_ai_platform/: __init__.py
tests/: __init__.py  test_ai_client.py  test_ai_client_dynamic_prompt.py  test_api_gateway.py  test_database.py  test_intent_classifier.py  test_language_detector.py  test_meeting_summary.py  test_memory.py  test_rate_limiter.py  test_sales_flow.py  test_tools.py  test_voice_handler.py  test_web_search.py
