[project]
name = "telegram-ai"
version = "0.2.1"
description = "Personal AI assistant for Telegram personal account with local AI server integration"
readme = "README.md"
authors = [
    { name = "FUYOH666", email = "iamfuyoh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.34.0,<2.0.0",
    "httpx>=0.24.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "google-api-python-client>=2.0.0,<3.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "pyyaml>=6.0.3",
    "google-auth-oauthlib>=1.2.3",
    "python-dotenv>=1.2.1",
    "pytz>=2024.1",
    "langdetect>=1.0.9,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
telegram-ai = "telegram_ai.main:cli"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.8",
]
