[project]
name = "telegram-ai-platform"
version = "0.7.0"
description = "Telegram AI Assistant Platform with microservices architecture"
readme = "README.md"
authors = [
    { name = "FUYOH666", email = "iamfuyoh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    # Database
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.29.0",  # PostgreSQL async
    "psycopg2-binary>=2.9.0",  # PostgreSQL sync
    # Cache and queues
    "redis>=5.0.0",
    "celery>=5.3.0,<6.0.0",
    # HTTP clients
    "httpx>=0.24.0,<1.0.0",
    "tenacity>=8.0.0,<9.0.0",
    # Telegram
    "telethon>=1.34.0,<2.0.0",
    # AI/ML
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.1",
    "chromadb>=0.4.0,<1.0.0",
    # Utilities
    "pytz>=2024.1",
    "langdetect>=1.0.9,<2.0.0",
    # Google APIs
    "google-api-python-client>=2.0.0,<3.0.0",
    "google-auth-oauthlib>=1.2.3",
    # FastAPI for API Gateway
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
telegram-ai = "services.telegram_bot.src.main:cli"
telegram-ai-api = "services.api_gateway.src.main:create_app"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.8",
]
