[project]
name = "telegram-ai-platform"
version = "0.7.0"
description = "Modern Telegram AI Assistant Platform with microservices architecture, LangChain, PostgreSQL, Redis, and REST API"
readme = "README.md"
authors = [
    { name = "FUYOH666", email = "iamfuyoh@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["telegram", "ai", "assistant", "llm", "rag", "microservices", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    # Database
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.29.0",  # PostgreSQL async
    "psycopg2-binary>=2.9.0",  # PostgreSQL sync
    # Cache and queues
    "redis>=5.0.0",
    "celery>=5.3.0,<6.0.0",
    # HTTP clients
    "httpx>=0.24.0,<1.0.0",
    "tenacity>=8.0.0,<10.0.0",
    # Telegram
    "telethon>=1.34.0,<2.0.0",
    # AI/ML
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.1",
    "chromadb>=0.4.0,<2.0.0",
    # Utilities
    "pytz>=2024.1",
    "langdetect>=1.0.9,<2.0.0",
    # Web scraping
    "trafilatura>=1.6.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    # Google APIs
    "google-api-python-client>=2.0.0,<3.0.0",
    "google-auth-oauthlib>=1.2.3",
    # FastAPI for API Gateway
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    # Prometheus metrics
    "prometheus-client>=0.19.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "bandit>=1.7.0,<2.0.0",
    "codespell>=2.2.0,<3.0.0",
    "pip-audit>=2.6.0,<3.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]

[project.scripts]
telegram-ai = "services.telegram_bot.src.main:cli"
telegram-ai-api = "services.api_gateway.src.main:create_app"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
include = ["src", "services", "shared", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/dist",
    "**/build",
    "**/.venv",
    "**/venv",
    "alembic/versions",
]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"
reportOptionalContextManager = "warning"
reportOptionalOperand = "warning"
reportGeneralTypeIssues = "warning"
reportPrivateImportUsage = "warning"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportMissingParameterType = "none"

[tool.bandit]
exclude_dirs = ["tests", "test", "venv", ".venv", "build", "dist", "alembic/versions"]
skips = ["B101"]  # Skip assert_used test
