[project]
name = "analytics-service"
version = "0.1.0"
description = "Analytics Service for exporting to Google Sheets/ClickUp"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.0.0,<3.0.0",
    "google-auth-oauthlib>=1.2.3",
    "httpx>=0.24.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

