[project]
name = "api-gateway-service"
version = "0.1.0"
description = "REST API Gateway Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "redis>=5.0.0",
    "httpx>=0.24.0,<1.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.24.0,<1.0.0",  # Для тестирования
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

