[project]
name = "telegram-bot-service"
version = "0.1.0"
description = "Telegram Bot Service with LangChain integration"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.34.0,<2.0.0",
    "httpx>=0.24.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "pytz>=2024.1",
    "langdetect>=1.0.9,<2.0.0",
    "chromadb>=0.4.0,<1.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.1",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",  # Для PostgreSQL async
    "psycopg2-binary>=2.9.0",  # Для PostgreSQL sync
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

