[project]
name = "worker-service"
version = "0.1.0"
description = "Celery Worker Service for async tasks"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.3.0,<6.0.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "httpx>=0.24.0,<1.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

